--- a/styles/main.module.css
+++ b/styles/main.module.css
@@ -77,6 +77,10 @@
 	.container {
 		max-width: 35%;
 	}
+
+	.mainButton {
+		margin-bottom: 1rem !important;
+	}
 }
 
 @media screen and (min-width: 1024px) {
@@ -88,6 +92,10 @@
 @media screen and (min-width: 1440px) {
 	.container {
 		max-width: 20%;
+	}
+
+	.mainButton:not(:last-child) {
+		margin-right: 2rem !important;
 	}
 }
 
