--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -64,7 +64,6 @@
 	-moz-box-align: center;
 	align-items: center;
 	padding: 0 16px;
-	height: 56px;
 	-webkit-box-shadow: 0 5px 10px rgb(0 0 0 / 6%);
 	box-shadow: 0 5px 10px rgb(0 0 0 / 6%);
 	background-color: #1e1b21;
@@ -396,6 +395,11 @@ button.buttonActiveEffect {
 	.headerMobile {
 		background-color: #2c2a31;
 		border-bottom: 1px solid #3b3842;
+	}
+	
+	.header {
+		min-height: 56px;
+		max-height: 56px;
 	}
 }
 
