--- a/styles/main.module.css
+++ b/styles/main.module.css
@@ -99,6 +99,12 @@
 	}
 }
 
+@media screen and (min-width: 2560px) {
+	.container {
+		max-width: 15%;
+	}
+}
+
 @media screen and (max-width: 600px) {
 	.mainButton {
 		margin-bottom: 1rem !important;
